@@ -1,9 +1,9 @@
 package seng202.team3.services;
 
+import seng202.team3.models.UserWineList;
 import seng202.team3.models.WineDrinker;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Service class for the profile screen
@@ -51,7 +51,7 @@ public class ProfileScreenService {
      * @return boolean of whether it is valid
      */
     public boolean isValidListName(String listName) {
-        List<String> currentListNames = wineListManager.getAllUserWineLists().stream().map(list -> list.getWineListName()).collect(Collectors.toList());
+        List<String> currentListNames = wineListManager.getAllUserWineLists().stream().map(UserWineList::getWineListName).toList();
         return !listName.trim().isEmpty() && !currentListNames.contains(listName);
     }
 }
